bugfix for lionSmile, css fix for z-indexes of panels, css fix for mobile hover effect on streamOnline button

--- a/client/src/styles/bigscreen.css
+++ b/client/src/styles/bigscreen.css
@@ -10,6 +10,7 @@
   left: 0px;
   box-sizing: border-box;
   transition: .4s ease-out;
+  z-index: 3;
 }
 .stream_wrapper--hidden {
   transform: translateY(100vh);
