--- a/client/src/styles/twitter.css
+++ b/client/src/styles/twitter.css
@@ -6,6 +6,7 @@
   height: 100vh;
   background-color: rgba(189, 160, 165, .97);
   transition: .4s ease-out;
+  z-index: 3;
 }
 .twitter__wrapper--hidden {
   transform: translateX(-450px);
